data/all_generated_tests/raw_wast_tests/if_MismanagementofBlockNesting_1639.wast
;; 10. Implement a combination of `if`, `block`, and `loop` instructions where an `if` block's `else` contains a branching instruction that must correctly unwind and reinitialize the stack within nested constructs.    - **Constraint**: Validate proper stack unwinding and branching within mixed constructs.    - **Behavior**: Mismanagement might cause incorrect stack state or control jumps.  Each test corresponds to constraints set forth by the WebAssembly if-instruction specification and explores potential mismanagement of nesting and label scope that needs to be validated against different implementations.

(assert_invalid
  (module
    (func $test (result i32)
      (i32.const 0)
      (block (result i32)
        (loop (result i32)
          (if (result i32)
            (i32.const 1)
            (then
              (i32.const 42)
            )
            (else
              (br 1)
            )
          )
        )
      )
    )
  )
  "invalid `br` destination or type mismatch"
)